<resources>
    <string name="app_name">校园问答软件</string>
    <string name="textlogin_id">请输入学号</string>
    <string name="textlogin_password">请输入密码（学号后六位）</string>
    <string name="rememberpassword">记住密码</string>
    <string name="text_loginbutton">登录</string>
    <string name="autologin">自动登录</string>
    <string name="wentitijiao">请输入您想提交的问题</string>
    <string name="queding">确定</string>
    <string name="tijiao">提交</string>
    <string name="fanhui">返回</string>
    <string name="tuichu">退出</string>
    <string name="huida">请输入你想给出的答案</string>
    <string name="wenti">问题的题目</string>

</resources>
