<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="回答界面"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="6dp"
        android:textSize="35dp" />
    <TextView
        android:id="@+id/wenti"
        android:layout_width="380dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="#EEA2AD"
        android:hint="@string/wenti"
        android:paddingLeft="8dp" />

    <EditText
        android:id="@+id/login_id"
        android:layout_width="380dp"
        android:layout_height="211dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="#3F51B5"
        android:hint="@string/huida"
        android:paddingLeft="8dp" />

    <Button
        android:id="@+id/tijiao"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="110dp"
        android:layout_marginTop="15dp"
        android:background="#FA8072"
        android:text="@string/tijiao"
        android:textColor="@color/colorlogin_text"
        android:textSize="15dp" />
    <Button
        android:id="@+id/tuichu"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_marginLeft="125dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="-35dp"
        android:layout_marginBottom="10dp"
        android:background="#9FB6CD"
        android:layout_gravity="center_horizontal"
        android:text="@string/tuichu"
        android:textColor="@color/colorlogin_text"
        android:textSize="15dp" />
    <ListView
        android:id="@+id/list_test"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        />

</LinearLayout>
