<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".denglujiemian"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/login_avatar"
        android:layout_width="168dp"
        android:layout_height="112dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:src="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/loginid"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:paddingLeft="8dp"
        android:background="#3F51B5"
        android:inputType="number"
        android:hint="@string/textlogin_id"/>
    <EditText
        android:id="@+id/loginpassword"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:paddingLeft="8dp"
        android:background="#FF4081"
        android:inputType="textPassword"
        android:hint="@string/textlogin_password"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp">

        <CheckBox
            android:id="@+id/login_rememberpassword"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="27dp"
            android:text="@string/rememberpassword" />

        <CheckBox
            android:id="@+id/login_autologin"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="27dp"
            android:text="@string/autologin" />
    </RelativeLayout>

    <Button
        android:id="@+id/denglu"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/shape_radius"
        android:layout_gravity="center_horizontal"
        android:text="@string/text_loginbutton"
        android:textColor="@color/colorlogin_text"
        android:textSize="20dp" />

    <Button
        android:id="@+id/zhuce"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/shape_radius"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="注册"
        android:textColor="@color/colorlogin_text"
        android:textSize="20dp" />
</LinearLayout>