<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".denglujiemian"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/apptu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/shu"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"/>
    <EditText
        android:id="@+id/login_id2"
        android:layout_width="320dp"
        android:layout_height="148dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:paddingLeft="8dp"
        android:background="#B9D3EE"
        android:hint="@string/wentitijiao"/>
    <Button
        android:id="@+id/queding"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="110dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:background="#FA8072"
        android:layout_gravity="center_horizontal"
        android:text="@string/queding"
        android:textColor="@color/colorlogin_text"
        android:textSize="15dp" />
    <Button
        android:id="@+id/fanhui"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_marginLeft="125dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="-35dp"
        android:layout_marginBottom="10dp"
        android:background="#9FB6CD"
        android:layout_gravity="center_horizontal"
        android:text="@string/fanhui"
        android:textColor="@color/colorlogin_text"
        android:textSize="15dp" />
</LinearLayout>